<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_webots_shadow</name>
  <version>0.0.0</version>
  <description>ROS 2 package for Webots Shadow Robot</description>
  <maintainer email="seslavav@alumnos.unex.es">SergioEslava</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <build_depend>rclcpp</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
